--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -36,6 +36,15 @@
         </div>
     </div>
 
+    <div class="grupo-menu">
+        <div class="container-icone-menu">
+            <div class="caixa-menu caixa-menu-texto" (click)="selectMenu(5)"
+                [ngClass]="{'caixa-menu-select': this.menuService.menuSelecionado == 5, '':this.menuService.menuSelecionado!= 5}">
+                Usuarios
+            </div>
+        </div>
+    </div>
+
 
     <div class="grupo-menu">
         <div class="container-icone-menu">
