--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -131,9 +131,9 @@
                         Executar copia das despesas
                     </div>
 
-                    <h3 class="card-title"> R$
+                    <h3 class="card-title"> On
                         <span id="Investimento">
-                            0
+                       
                         </span>
                     </h3>
 
@@ -141,7 +141,7 @@
 
                 <div class="card-footer">
                     <div class="arrow"></div>
-                    <div class="text-info">Verificar Despesas atrasadas</div>
+                    <div (click)="ExecuteCopiaDespesasSistemafinanceiro()" class="text-info">Executar</div>
                 </div>
 
 
